Modified validation message in watch form. Commented output in agent Rake task

--- a/app/views/watches/_watchform.html.erb
+++ b/app/views/watches/_watchform.html.erb
@@ -1,4 +1,4 @@
-<%= error_messages_for :watch, :id => 'errors', :header_message => nil, :message => 'We had some problems saving the watch:' %>
+<%= error_messages_for :watch, :id => 'errors', :header_message => nil, :message => 'We had some problems saving your watch:' %>
 <% form_for @watch do |f| %>
   <fieldset>
     <p>
