Minor tweaks to alert email

--- a/app/views/alert/alert.erb
+++ b/app/views/alert/alert.erb
@@ -1,4 +1,4 @@
-Hello <%= @user.name %>,
+Hi <%= @user.forenames %>,
 
 This is an automated email from Address Watcher (http://addresswatcher.com).
 
