Added alternate link tag for watches Atom feed to Watches page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title><%= yield :title || 'Address Watcher' %></title>
+    <%= yield :feed_link %>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <%= javascript_include_tag 'prototype', 'effects', 'application' %>
