--- a/app/views/watches/index.html.erb
+++ b/app/views/watches/index.html.erb
@@ -1,4 +1,7 @@
 <% title('Watches') %>
+<% content_for(:feed_link) do -%>
+<%= auto_discovery_link_tag(:atom, feed_path(current_user.feed_guid), { :title => "Watches For #{current_user.name} - Address Watcher" }) %>
+<% end -%>
 <h1><%= gravatar_image %>Watches for <%= current_user.name %></h1>
 <p id="updated"><%= watches_updated_on current_user %></p>
 <p id="feed"><%= feed_link %></p>
