--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
       <%= yield %>
     </div>
     <div id="footer">
-      <p>Copyright &copy; 2008 <a href="http://www.johntopley.com/">John Topley</a></p>
+      <p>Copyright &copy; 2008&ndash;<%= Time.now.year %> <a href="http://www.johntopley.com/">John Topley</a></p>
     </div>
   </body>
 </html>
