--- a/app/views/admin/maintenance.html.erb
+++ b/app/views/admin/maintenance.html.erb
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div id="footer">
-      <p>Copyright &copy; 2008 <a href="http://www.johntopley.com/">John Topley</a></p>
+      <p>Copyright &copy; 2008&ndash;<%= Time.now.year %> <a href="http://www.johntopley.com/">John Topley</a></p>
     </div>
   </body>
 </html>
